# degree-audit

./: .gitignore  Cargo.toml  README.md  client.py
data/: refactored.json  request.json  response.json  student.json
examples/multi-schools-with-transfer/: auditor.py  with-transfer.py  without-transfer.py
examples/multi-schools-with-transfer/school-a/: ba-english.json
examples/multi-schools-with-transfer/school-b/: ba-english.json
src/: exact.rs  group.rs  lib.rs  subject.rs
