[package]
name = "degree-audit"
version = "0.0.0"
authors = ["David Holtz <david.richard.holtz@gmail.com>"]
edition = "2018"

[[bin]]
name = "serve"
path = "bin/serve.rs"

[[bin]]
name = "lambda"
path = "bin/lambda.rs"


[dependencies]
logicmap = "0.0.0"
serde_json = "1.0.0"
serde = {version = "1.0.0", features = ["derive"]}

# web stuff
actix-web = "3"
env_logger = "0.8.3"

# aws lambda serverless
lambda_runtime = "0.3.0"
tokio = "1.3.0"